[package]
name = "tokimo-web-fetch"
version = "0.1.0"
edition = "2024"
description = "Unified web page fetcher: HTTP / headless browser (Lightpanda) / Cloudflare bypass (FlareSolverr) + Readability denoising"

[lib]
name = "tokimo_web_fetch"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.13", features = ["json", "cookies", "gzip", "brotli"] }
tokio = { version = "1", features = ["rt", "macros", "time", "process", "io-util"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
url = "2"
dom_smoothie = "0.17"

[lints]
workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
