[workspace]
members = ["."]
resolver = "2"

[workspace.package]
rust-version = "1.94.0"

[workspace.lints.rust]
unsafe_code     = "warn"
unused_must_use = "deny"

[workspace.lints.clippy]
all      = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
wildcard_imports          = "allow"
module_name_repetitions   = "allow"
must_use_candidate        = "allow"
missing_errors_doc        = "allow"
missing_panics_doc        = "allow"
items_after_statements    = "allow"
struct_excessive_bools    = "allow"
similar_names             = "allow"
many_single_char_names    = "allow"
unnecessary_literal_bound = "allow"
doc_markdown              = "allow"
ref_option                = "allow"
fn_params_excessive_bools = "allow"
needless_pass_by_value    = "allow"
cast_possible_wrap        = "allow"
cast_possible_truncation  = "allow"
cast_precision_loss       = "allow"
cast_sign_loss            = "allow"
unwrap_in_result          = "warn"
panic                     = "warn"
todo                      = "warn"
dbg_macro                 = "warn"
print_stdout              = "warn"
print_stderr              = "warn"

[package]
name = "tokimo-web-fetch"
version = "0.1.0"
edition = "2024"
description = "Unified web page fetcher: HTTP / headless browser (Lightpanda) / Cloudflare bypass (FlareSolverr) + Readability denoising"

[lib]
name = "tokimo_web_fetch"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.13", features = ["json", "cookies", "gzip", "brotli"] }
tokio = { version = "1", features = ["rt", "macros", "time", "process", "io-util"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
url = "2"
dom_smoothie = "0.17"

[lints]
workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
